force-app/main/default/objects/UpdateFailure__c/UpdateFailure__c.object-meta.xml
<CustomObject>
    <label>Update Failure</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Update Failures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>