force-app/main/default/objects/UpdateFailure__c/fields/LinkObject__c.field-meta.xml
<CustomField>
    <fullName>LinkObject__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; RecordId__c, &quot;🔗 Link to record&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Object</label>
    <type>Text</type>
</CustomField>