force-app/main/default/objects/UpdateFailure__c/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <label>ObjectType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>